@@ -124,5 +124,8 @@
 - Fixed a bug that sometimes caused the app to crash when saving a task
 - Fixed a bug that caused the app to go unresponsive if it was repeatedly put in the background
 
-0?/??/2018 > Prime Number Finder version 1.3.8
+07/??/2018 > Prime Number Finder version 1.3.8
 - Fixed a bug that sometimes caused the app to crash when saving a task
+- Saved files can now be sorted by date, file size, etc.
+- Minor UI improvements
+- Minor bug fixes
